# kansei

./: package-lock.json
rust/: .gitignore  Cargo.toml
rust/kansei-core/: Cargo.toml
rust/kansei-core/src/: lib.rs
rust/kansei-core/src/buffers/: compute_buffer.rs  gpu_buffer.rs  instance_buffer.rs  mod.rs  sampler.rs  texture.rs
rust/kansei-core/src/cameras/: camera.rs
rust/kansei-core/src/controls/: camera_controls.rs  mod.rs  mouse_vectors.rs
rust/kansei-core/src/geometries/: box_geo.rs  geometry.rs  instanced_geometry.rs  mod.rs  plane.rs  sphere.rs
rust/kansei-core/src/lights/: area.rs  directional.rs  light_uniforms.rs  mod.rs  point.rs
rust/kansei-core/src/loaders/: gltf_loader.rs  mod.rs  texture_loader.rs
rust/kansei-core/src/materials/: binding.rs  compute.rs  material.rs  mod.rs  shader_utils.rs
rust/kansei-core/src/math/: matrix.rs  mod.rs  vector.rs
rust/kansei-core/src/objects/: cornell_box.rs  mod.rs  object3d.rs  renderable.rs  scene.rs
rust/kansei-core/src/pathtracer/: blue_noise.rs  buffers.rs  bvh_builder.rs  compositor.rs  effect.rs  material.rs  mod.rs  path_tracer.rs  probes.rs  radix_sort.rs  restir.rs  spatial_denoise.rs  temporal_denoise.rs  tlas_builder.rs
rust/kansei-core/src/pathtracer/shaders/: composite.wgsl  denoise-spatial.wgsl  denoise-temporal.wgsl  intersection.wgsl  morton.wgsl  probe-trace.wgsl  probe-update.wgsl  radix-sort.wgsl  restir-di.wgsl  tlas-build.wgsl  tlas-sort.wgsl  trace.wgsl  traversal.wgsl
rust/kansei-core/src/postprocessing/: effect.rs  gbuffer.rs  mod.rs  volume.rs
rust/kansei-core/src/postprocessing/effects/: bloom.rs  color_grading.rs  dof.rs  fluid_surface.rs  mod.rs
rust/kansei-core/src/renderers/: compute_batch.rs  gbuffer.rs  mod.rs  renderer.rs  shared_layouts.rs
rust/kansei-core/src/shaders/: basic.wgsl  basic_instanced.wgsl  basic_lit.wgsl  blit.wgsl  bloom_composite.wgsl  bloom_downsample.wgsl  bloom_upsample.wgsl  color_grading.wgsl  cubemap_shadow.wgsl  depth_copy.wgsl  particle_billboard.wgsl  shadow_vs.wgsl
rust/kansei-core/src/shadows/: cubemap_shadow_map.rs  mod.rs  shadow_map.rs
rust/kansei-core/src/simulations/fluid/: blit_pipeline.rs  contracts.rs  cornell_box.rs  density_field.rs  fluid_renderables.rs  marching_cubes.rs  marching_cubes_tables.rs  mod.rs  params.rs  particle_renderer.rs  simulation.rs  simulation_renderer.rs  surface_renderer.rs
rust/kansei-core/src/systems/: compute_system.rs  mod.rs
rust/kansei-native/: Cargo.toml
rust/kansei-native/examples/: basic.rs  fluid_3d.rs  fluid_engine.rs  gltf_viewer.rs  instanced_cubes.rs  lit_scene.rs  particles_test.rs  pathtracer_test.rs  postprocess_scene.rs  shadow_scene.rs  spinning_box.rs  triangle.rs
rust/kansei-native/src/: main.rs
rust/kansei-wasm/: Cargo.toml
rust/kansei-wasm/examples/fluid/: Cargo.toml
rust/kansei-wasm/examples/fluid/src/: lib.rs
rust/kansei-wasm/examples/fluid/www/: index.html
rust/kansei-wasm/examples/instanced-cubes/: Cargo.toml
rust/kansei-wasm/examples/instanced-cubes/src/: lib.rs
rust/kansei-wasm/examples/instanced-cubes/www/: index.html
rust/kansei-wasm/examples/lit-scene/: Cargo.toml
rust/kansei-wasm/examples/lit-scene/src/: lib.rs
rust/kansei-wasm/examples/lit-scene/www/: index.html
rust/kansei-wasm/examples/pathtracer/: Cargo.toml
rust/kansei-wasm/examples/pathtracer/src/: lib.rs
rust/kansei-wasm/examples/pathtracer/www/: index.html
rust/kansei-wasm/examples/postprocess-scene/: Cargo.toml
rust/kansei-wasm/examples/postprocess-scene/src/: lib.rs
rust/kansei-wasm/examples/postprocess-scene/www/: index.html
rust/kansei-wasm/examples/shadow-scene/: Cargo.toml
rust/kansei-wasm/examples/shadow-scene/src/: lib.rs
rust/kansei-wasm/examples/shadow-scene/www/: index.html
rust/kansei-wasm/examples/spinning-box/: Cargo.toml
rust/kansei-wasm/examples/spinning-box/src/: lib.rs
rust/kansei-wasm/src/: lib.rs
rust/kansei-wasm/www/: index.html
src/: main.ts
(+159 files in other folders)
