[workspace]
resolver = "2"
members = [
    "kansei-core",
    "kansei-wasm",
    "kansei-native",
]

[workspace.dependencies]
wgpu = "24"
glam = { version = "0.29", features = ["bytemuck"] }
bytemuck = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
pollster = "0.4"
image = "0.25"
gltf = { version = "1", features = ["utils"] }
