[package]
name = "kansei-core"
version = "0.1.0"
edition = "2021"
description = "Kansei WebGPU rendering engine — core library"

[dependencies]
wgpu = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }
log = { workspace = true }
image = { workspace = true }
gltf = { workspace = true }
egui = { version = "0.31", optional = true }
egui-wgpu = { version = "0.31", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "HtmlCanvasElement", "MouseEvent", "WheelEvent", "EventTarget",
] }
wasm-bindgen = "0.2"

[features]
default = []
egui = ["dep:egui", "dep:egui-wgpu"]
