[package]
name = "kansei-wasm"
version = "0.1.0"
edition = "2021"
description = "Kansei engine — WASM bindings"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
kansei-core = { path = "../kansei-core" }
wgpu = { workspace = true, features = ["webgpu"] }
glam = { workspace = true }
bytemuck = { workspace = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "HtmlCanvasElement", "Window", "Document",
    "Element", "MouseEvent", "WheelEvent",
    "KeyboardEvent", "EventTarget", "Performance",
] }
js-sys = "0.3"
log = { workspace = true }
console_log = "1"
console_error_panic_hook = "0.1"
